--- a/article/94911.html
+++ b/article/94911.html
@@ -44,125 +44,53 @@
             <div class="b-header-sticky-wrap">
                 <div class="b-header-sticky">
                     <div class="b-header2 d-flex flex-row justify-content-between">
-                        <div class="b-header2__logo"> <a href="https://primpress.ru"
+                        <div class="b-header2__logo"> <a href="../index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="../img/template/logo_light.svg" alt="PRIMPRESS.RU | Новости Приморского края">
-                            </a> </div> <a href="/20idei" target="_blank" title="20 идей развития России"> <img
-                                src="https://primpress.ru/img/template/20-idey-v4.jpg" class="pl-5 pt-1"
-                                alt="20 идей развития России"> </a> <a href="https://primpogoda.ru/weather/vladivostok"
-                            title="ПримПогода | Погода во Владивостоке сейчас" target="_blank">
-                            <div class="b-header2__weather b-weather2"
-                                title="ПримПогода | Погода во Владивостоке сейчас">
-                                <div class="b-weather2__title"> Погода во Владивостоке </div>
-                                <div class="d-flex d-inline">
-                                    <div class="b-weather2__img"></div>
-                                    <div class="b-weather2__text">
-                                        <div> <span class="b-weather2__text--bold"> <span
-                                                    title="Температура воздуха">-11°C</span>, <span
-                                                    title="Скорость ветра">3</span> </span> <span
-                                                class="b-weather2__text--lite">м/с</span> </div>
-                                        <div class="b-weather2__primpogoda"> <span
-                                                class="b-weather2__prim">Прим</span><span
-                                                class="b-weather2__pogoda">Погода</span> </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a> <a href="https://primpress.ru/probki" title="Пробки">
-                            <div class="b-header2__probki b-probki2">
-                                <div class="b-probki2__top">Пробки</div>
-                                <div class="b-probki2__img"
-                                    style="background: url(/img/template/probki/yellow.png) no-repeat">6</div>
-                                <div class="b-probki2__bottom">баллов</div>
-                            </div>
-                        </a>
-                        <div class="b-currency" title="Курсы валют на 16.12.2022">
-                            <div class="b-currency__top">
-                                <div class="b-currency__left">
-                                    <div title="64.30 &#8381; за 1 доллар США"> <span
-                                            class="b-currency__symbol">$</span> 64.30<b class="b-currency--up">▲</b>
-                                    </div>
-                                </div>
-                                <div class="b-currency__right">
-                                    <div title="92.08 &#8381; за 10 китайских юаней"> <span
-                                            class="b-currency__symbol">Ұ</span> 92.08<b class="b-currency--up">▲</b>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="b-currency__bottom">
-                                <div class="b-currency__left">
-                                    <div title="68.45 &#8381; за 1 евро"> <span class="b-currency__symbol">€</span>
-                                        68.45<b class="b-currency--up">▲</b> </div>
-                                </div>
-                                <div class="b-currency__right">
-                                    <div title="47.50 &#8381; за 100 японских йен"> <span
-                                            class="b-currency__symbol">¥</span> 47.50<b class="b-currency--up">▲</b>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="b-currency__date"> по данным ЦБ на 16.12.2022 </div>
-                        </div>
+                                    src="../img/template/logo_light.svg"
+                                    alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a
+                            href="https://primpress.ru/probki" title="Пробки">
                     </div>
                     <div class="b-navbar-header2 d-flex flex-row justify-content-between">
                         <div class="b-navbar-header2__links">
-                            <div class="btn-group"> <a href="/news" class="pl-3">Новости</a> <a href="#"
-                                    class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false"></a>
-                                <div class="dropdown-menu b-navbar-header2__dropdown-menu"
-                                    aria-labelledby="dropdownMenuButton"> <a class="dropdown-item" href="/news/society"
-                                        title="Общество">Общество</a> <a class="dropdown-item" href="/news/economy"
-                                        title="Экономика">Экономика</a> <a class="dropdown-item" href="/news/politics"
-                                        title="Политика">Политика</a> <a class="dropdown-item" href="/news/culture"
-                                        title="Шоу-бизнес">Шоу-бизнес</a> <a class="dropdown-item" href="/news/sport"
-                                        title="Спорт">Спорт</a> <a class="dropdown-item" href="/news/incidents"
-                                        title="Происшествия">Происшествия</a> <a class="dropdown-item"
-                                        href="/news/business" title="Бизнес">Бизнес</a> <a class="dropdown-item"
-                                        href="/news/health" title="Здоровье">Здоровье</a> <a class="dropdown-item"
-                                        href="/news/food" title="Еда">Еда</a> <a class="dropdown-item"
-                                        href="/news/realty" title="Недвижимость">Недвижимость</a> <a
-                                        class="dropdown-item" href="/news/auto" title="Авто">Авто</a> <a
-                                        class="dropdown-item" href="/news/consumers" title="Клуб потребителей">Клуб
-                                        потребителей</a> <a class="dropdown-item" href="/news/social"
-                                        title="Соцсети">Соцсети</a> <a class="dropdown-item" href="/news/russia"
-                                        title="Главное в России">Главное в России</a> <a class="dropdown-item"
-                                        href="/news/world" title="В мире">В мире</a> </div> <a href="/region"
-                                    title="Жизнь региона">Жизнь региона</a> <a href="/media"
-                                    title="Мультимедиа">Мультимедиа</a> <a href="/culture" title="Культура">Культура</a>
-                                <a href="/cards" title="Картотека">Картотека</a> <a href="/news/social"
-                                    title="Соцсети">Соцсети</a> <a href="/narrative" title="Листалка">Листалка</a>
+                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="../news.html"
+                                    class="pl-3">Новости</a> <a href="#" style="display: none;" class="dropdown-toggle"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a> <a
+                                    class="dropdown-item" href="../society.html" title="Общество">Общество</a> <a
+                                    href="../economy.html" title="Экономика">Экономика</a> <a href="../politics.html"
+                                    title="Политика">Политика</a>
+                                <a href="../health.html" title="Здоровье">Здоровье</a>
                             </div>
                         </div>
                         <div class="b-navbar-header2__icons">
-                            <div class="b-navbar-header2__icons-bg"> <a href="https://vk.com/primpress" target="_blank"
+                            <div class="b-navbar-header2__icons-bg"> <a href="https://vk.com/" target="_blank"
                                     title="Primpress в ВКонтакте"> <i class="fa fa-vk"></i> </a> <a
-                                    href="https://ok.ru/primpress" target="_blank" title="Primpress в Одноклассниках">
-                                    <i class="fa fa-odnoklassniki"></i> </a> <a href="https://t.me/primpressru/"
-                                    target="_blank" title="Primpress в Telegram" rel="nofollow"> <i
-                                        class="fa fa-telegram"></i> </a> <a href="#" id="js-header-search"
-                                    title="Поиск по сайту"> <i class="fa fa-search"></i> </a> <a href="#"
-                                    id="js-navbar-trigger" title="Меню"> <i class="fa fa-bars"></i> </a> </div>
+                                    href="https://ok.ru/" target="_blank" title="Primpress в Одноклассниках">
+                                    <i class="fa fa-odnoklassniki"></i> </a> <a href="https://t.me/" target="_blank"
+                                    title="Primpress в Telegram" rel="nofollow"> <i class="fa fa-telegram"></i> </a> <a
+                                    href="#" id="js-header-search" title="Поиск по сайту"> <i class="fa fa-search"></i>
+                                </a> <a href="#" id="js-navbar-trigger" title="Меню"> <i class="fa fa-bars"></i> </a>
+                            </div>
                         </div>
                     </div>
                     <div class="b-navbar-dropdown-wrap">
                         <div class="b-navbar-dropdown-header">
-                            <form method="POST" action="/mobile-switch.html" accept-charset="UTF-8"><input name="_token"
-                                    type="hidden" value="EtvsC5eMWICgfKhyuRGuo9rDhBhs7SHhuEWJ0RsV"> <button
-                                    type="submit" title="Мобильная версия сайта" class="btn-change-mobile"> <i
+                            <form method="POST" action="/mobile-switch.html" accept-charset="UTF-8">
+                                <input name="_token" type="hidden" value="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe">
+                                <button type="submit" title="Мобильная версия сайта" class="btn-change-mobile"> <i
                                         class="fa fa-mobile fa-mobile-fix"></i> <span>Мобильная версия сайта</span>
                                 </button> <input name="_token" type="hidden"
-                                    value="EtvsC5eMWICgfKhyuRGuo9rDhBhs7SHhuEWJ0RsV"> </form>
+                                    value="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe">
+                            </form>
                         </div>
                     </div>
                     <div class="b-search-header">
                         <form method="GET" action="https://primpress.ru/search" accept-charset="UTF-8"
                             class="b-search-header__wrapper" role="search"> <input class="b-search-header__input"
                                 value="" placeholder="Поиск..." maxlength="64" minlength="3" required name="find">
-                            <button class="b-search-header__btn"> <i class="fa fa-search"></i> </button> </form>
+                            <button class="b-search-header__btn"> <i class="fa fa-search"></i> </button>
+                        </form>
                     </div>
                 </div>
-            </div>
-            <div class="mx-3 mt-4 hidden-print g-max-h-300" style="min-height: 100px;">
-                <div id="yandex_rtb_R-A-1834986-6"></div>
-                <script>window.yaContextCb.push(() => { Ya.Context.AdvManager.render({ renderTo: 'yandex_rtb_R-A-1834986-6', blockId: 'R-A-1834986-6' }) }) </script>
             </div>
         </header>
         <section class="container-fluid b-wrap__content">
