--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                             <div id="js-fixed-slider-next"
                                 class="fa fa-chevron-right b-slider-card__nav b-slider-card__nav--next g-cursor-pointer">
                             </div>
-                            <div id="js-fixed-slider" class="owl-carousel"> <a href="https://primpress.ru/article/94911"
+                            <div id="js-fixed-slider" class="owl-carousel"> <a href="article/94911.html"
                                     title="Водители автобусов продолжают нарушать ПДД во Владивостоке">
                                     <div class="b-region-home b-region-home--h350 g-img-fit">
                                         <div class="b-region-home__img"> <img
