--- a/economy.html
+++ b/economy.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/template/logo_light.svg" />
     <meta property="og:url" content="https://primpress.ru" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
+    <meta property="og:site_name" content="NewPress"/>
     <meta name="twitter:image" content="img/template/logo_light.svg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
