--- a/index.html
+++ b/index.html
@@ -787,8 +787,8 @@
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
                             <li><a href="news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="./index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="./index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
@@ -798,7 +798,7 @@
                             <li><a href="economy.html" title="Экономика">Экономика</a></li>
                             <li><a href="politics.html" title="Политика">Политика</a></li>
                             <li><a href="health.html" title="Здоровье">Здоровье</a></li>
-                        </ul>
+                        </ul>   
                     </div>
                 </div>
             </div>
