--- a/article/94220.html
+++ b/article/94220.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:image" content="https://primpress.ru/img/articles/1130221130401dp.jpg" />
     <meta property="og:url" content="94220.html" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
+    <meta property="og:site_name" content="NewPress" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1130221130401dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
