--- a/article/94957.html
+++ b/article/94957.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:image" content="https://primpress.ru/img/articles/1216221236321dp.jpg" />
     <meta property="og:url" content="https://primpress.ru/article/94957" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
+    <meta property="og:site_name" content="NewPress" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1216221236321dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
