--- a/article/94916.html
+++ b/article/94916.html
@@ -118,11 +118,11 @@
                             <hr>
                             <div class="imagePattern_big-full g-img-fit b-main-photo-overlay-wrapper mb-3">
                                 <div class="b-main-photo-overlay">Фото: Максим Долбнин / vlc.ru</div> <a
-                                    href="/img/editor/images/IMG_542.jpg" data-toggle="lightbox"
+                                    href="https://primpress.ru/img/articles/1215221401011dp.jpg" data-toggle="lightbox"
                                     data-gallery="multimedia"
                                     title="Фото: Максим Долбнин / vlc.ru | Жители Владивостока приняли участие в обсуждении будущего благоустройства сопки Орлиное Гнездо"
                                     data-footer="Фото: Максим Долбнин / vlc.ru | Жители Владивостока приняли участие в обсуждении будущего благоустройства сопки Орлиное Гнездо">
-                                    <img src="/img/editor/images/IMG_542.jpg" itemprop="image"
+                                    <img src="https://primpress.ru/img/articles/1215221401011dp.jpg" itemprop="image"
                                         class="img-fluid"
                                         alt="Фото: Максим Долбнин / vlc.ru | Жители Владивостока приняли участие в обсуждении будущего благоустройства сопки Орлиное Гнездо">
                                 </a>
@@ -180,13 +180,11 @@
 
                                 <p>При дальнейшей работе над проектом будут учтены все замечания и предложения. В
                                     концепцию развития территорий могут внести вклад и жители, которые не присутствовали
-                                    на встрече: для этого нужно зайти на <a href="https://vlparki.ru/">сайт Дирекции
-                                        общественных пространств Владивостока.</a></p>
+                                    на встрече: для этого нужно зайти на сайт Дирекции
+                                        общественных пространств Владивостока.</p>
 
                                 <p><span class="no_rss">Также до 31 декабря проходит онлайн-опрос по благоустройству
-                                        сопки Орлиное Гнездо.</span> Участие в нем можно принять по ссылке <a
-                                        data-entity-type="MessageEntityUrl"
-                                        href="http://city.xn-----glccfbc4ebdaxw3bzag.xn--p1ai/sopka_orlinoie_gnezdo/">city.чего-хочет-город.рф/sopka_orlinoie_gnezdo/</a>.
+                                        сопки Орлиное Гнездо.</span> Участие в нем можно принять по ссылке city.чего-хочет-город.рф/sopka_orlinoie_gnezdo/.
                                 </p>
 
                                 <p><span class="no_rss">В начале 2023 года состоится еще одна встреча, в ходе которой
@@ -415,7 +413,7 @@
                             </div>
                             <div class="col-12 mb-3 mt-4">
                                 <div id="external_iframe"></div>
-                                <script async src="https://smi.media/vidjetru.js"></script>
+                                
                             </div>
                         </div>
                     </div>
