--- a/economy.html
+++ b/economy.html
@@ -303,10 +303,6 @@
                                         </div>
                                     </a> </div>
                             </div>
-                            <div class="mb-3">
-                                <div id="external_iframe"></div>
-                                <script async src="https://smi.media/vidjetru.js"></script>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -323,8 +319,8 @@
                             <h5>РАЗДЕЛЫ</h5>
                             <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
                                 <li><a href="news.html" itemprop="url" title="Новости">Новости</a></li>
-                                <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                                <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                                <li><a href="index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                                <li><a href="index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                             </ul>
                         </div>
                         <div class="col-3">
