--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Новости Приморья на NewPress. Последние новости Приморья и Владивостока</title>
     <meta name="description" content="Качественные новости о жизни Приморского края и Владивостока">
     <meta name="pmail-verification" content="ce49cdd6956234d8420da6befd62db99">
-    <meta property="og:title" content="Новости Приморья на NewPress. Последние новости Приморья и Владивостока" />
+    <meta property="og:title" content="Новости Приморья на NewPress. Последние новости Приморья и shortroot" />
     <meta property="og:description" content="Качественные новости о жизни Приморского края и Владивостока" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/template/logo_light.svg" />
